[package]
name = "todolist-back"
version = "0.1.0"
authors = ["Diego Echeverria <diego.echeverria@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt ="1.0.0"
actix-web = "3"
serde = { version = "1.0.104", features = ["derive"] }
dotenv = "0.15.0"
config = "0.11.0"